--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1360,7 +1360,70 @@ h6 {
   }
 }
 
-/*--------------------------------------------------------------
+!-- ======= Footer ======= -->
+<footer id="footer">
+  <div class="footer-top">
+    <div class="container">
+      <div class="row">
+
+        <div class="col-lg-3 col-md-6 footer-info">
+          <img src="https://i.postimg.cc/Rhjc8zt8/Logo-evento.jpg" alt="Logo del Evento">
+          <p>Derechos reservados.</p>
+        </div>
+
+        <div class="col-lg-3 col-md-6 footer-links">
+          <h4>Enlaces Útiles</h4>
+          <ul>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Inicio</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Acerca de</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Servicios</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Términos de servicio</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Política de privacidad</a></li>
+          </ul>
+        </div>
+
+     
+        <div class="col-lg-3 col-md-6 footer-contact">
+          <h4>Contáctanos</h4>
+          <p>
+            Anillo Periférico Ecológico 3507 Torres Médicas Angelópolis, <br>
+            72821 San Bernardino Tlaxcalancingo, Pue.<br>
+            México <br>
+            <strong>Teléfono:</strong> +52 2222393453<br>
+            <strong>Email:</strong> mayerandreas3@gmail.com<br>
+          </p>
+
+          <div class="social-links">
+            <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
+            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
+            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+            <a href="#" class="google-plus"><i class="bi bi-instagram"></i></a>
+            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+          </div>
+
+        </div>
+
+      </div>
+    </div>
+  </div>
+
+  <div class="container">
+    <div class="copyright">
+      &copy; Derechos de Autor <strong>Laser en Medicina</strong>. Todos los Derechos Reservados
+    </div>
+    <div class="credits">
+      Diseñado por <a href="https://bootstrapmade.com/">BootstrapMade</a>
+    </div>
+  </div>
+</footer><!-- End Footer
+
+
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+
+  <!-- Vendor JS Files -->
+  <script src="assets/vendor/aos/aos.js"></script>
+  porfa dale forma porque así se cae desalineado # Footer
+--------------------------------------------------------------*/
 #footer {
   background: #101522;
   padding: 0 0 25px 0;
@@ -1510,7 +1573,6 @@ h6 {
   text-align: center;
   font-size: 13px;
   color: #ddd;
-
 }
 #speakers .speaker {
   background: #fff; /* Fondo claro para cada ponente */
