--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1474,3 +1474,15 @@ h6 {
     display: block;
 }
 
+.imagen-izquierda {
+  position: absolute;
+  top: 50px;
+  left: 20px;
+  width: 200px;
+  height: auto;
+  object-fit: contain;
+}
+
+.col-lg-8 {
+  padding-left: 250px; /* Aumenta el margen izquierdo para que no se superponga con la imagen */
+}
